# backset

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  compose.yml  docker-build.sh  sqlx-data.json
.github/workflows/: rust.yml
.sqlx/: query-59f26753871560cbc3a4819decbddfc4895a6da0fe9b1162638598d05b2200c7.json  query-5fa322f469de5f4874b7abe47d660aa2e38170037252fead3cd046ccc89bf5d8.json  query-a7ebcd3b52747be0e9cae0723f55b495609043bb8e5307c377e22fff8052b687.json  query-c4781ab073b5977e07be827b3c9d411e84cbe5b53b998a78f0124c933a7b8010.json  query-e43937670f326dda7fc3e001ef0fc849a7302eb76d3a85fc4ec1aa597f974bec.json  query-ef166bb1242c93649ec2bbed66e4f5d27e776be3b599caf6d310a436ea9b8e96.json
docs/: api.md  docker.md  installation.md
migrations/: 20230226191540_create-tenants-table.sql  20230226191540_create-tenants-table.up.sql  20230924211953_create-elements-table.down.sql  20230924211953_create-elements-table.up.sql
scripts/: recreate-db-test.sh  recreate-db.sh  wait-port.sh
src/: app_args.rs  app_cmd.rs  app_server.rs  app_state.rs  config.rs  core.rs  errors.rs  health.rs  lib.rs  main.rs  page.rs  query.rs  routes.rs  stream.rs  tenants.rs  test.rs  utils.rs
src/conf/: config.rs  db.rs  env.rs  mod.rs  server.rs
src/elements/: api.rs  model.rs
src/tenants/: api.rs  model.rs
tests/backset/: elements_api_tests.rs  health_api_tests.rs  main.rs  tenants_api_tests.rs
tests/tenants/: api_tests.rs  health_api_tests.rs  main.rs
