[package]
name = "backset"
version = "0.1.0"
edition = "2021"
description = " Backset REST Service stores elements, sets, and relationships between them."
readme = "README.md"
homepage = "https://github.com/mrsarm/backset"
repository = "https://github.com/mrsarm/backset"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backset"

[dependencies]
actix-web = "4.4"
actix-web-validator = "5.0"
actix-http = "3.5"
actix-contrib-logger = "0.1"
actix-contrib-rest = { version = "0.4", features = ["sqlx-postgres"] }
awc = { version = "3.3", features = ["rustls"] }
anyhow = "1.0"
async-once-cell = "0.5"
clap = { version = "4.3", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.10"
futures-core = "0.3"
lazy_static = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_valid = "0.16"
sqlx = { version = "0.7", features = ["runtime-async-std", "tls-native-tls", "postgres", "macros", "chrono"] }
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
strum = "0.25"
strum_macros = "0.25"
rand = "0.8"
regex = "1.9"
server-env-config = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
